<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_naam"
        android:id="@+id/tv_eventnaam"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/tv_eventvanbedrijf"
        android:layout_alignStart="@+id/tv_eventvanbedrijf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_description"
        android:id="@+id/tv_eventdescription"
        android:maxLines="5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_vanbedrijf"
        android:id="@+id/tv_eventvanbedrijf"
        android:layout_above="@+id/textView7"
        android:layout_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Event_start"
        android:id="@+id/tv_eventstart"
        android:layout_below="@+id/tv_eventvanbedrijf"
        android:layout_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Event_eind"
        android:id="@+id/tv_eventeind"


        android:layout_below="@+id/tv_eventstart"
        android:layout_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_displayname"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_displaydesc"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_displaybedrijf"
        android:id="@+id/textView6"
        android:layout_below="@+id/tv_eventdescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_displaystarttijd"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_displayeindtijd"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>