<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/com_facebook_loginview_default_style"
        android:background="@color/darkorange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plaatsevent_eventkop"
        android:id="@+id/tv_eventTitel"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_eventNaam"
        android:hint="@string/plaatsevent_naam"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_eventDesc"
        android:hint="@string/plaatsevent_beschrijving"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/et_eventStart"
        android:hint="@string/plaatsevent_starthint"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/et_eventEind"
        android:hint="@string/plaatsevent_eindhint"
        />

    <Button
        android:textColor="@color/darkorange"
        style="@style/com_facebook_loginview_default_style"
        android:background="@color/gray2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/plaatsevent_eventbutton"
        android:id="@+id/btn_maakEvent"
        android:layout_gravity="center_horizontal" />

</LinearLayout>