<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/mainlo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:text="@string/eventalert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/ettitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventalert_titelhint"
        android:inputType="text"/>
    <TextView
        android:text="@string/eventalert_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etsnippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventalert_descriptionhint"
        android:inputType="text"/>
</LinearLayout>