<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendsinfo_emailvriend"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/tv_friends"
       android:text="@string/friendsinfo_vriendnaam"
       android:layout_above="@+id/textView"
       android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendsinfo_laatstgezien"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendsinfo_vriendgezien"
        android:id="@+id/tv_vriendlaatst"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true" />

</RelativeLayout>