<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_VeranderPaswoordHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changepassword_header"
        android:textSize="30sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_noInternet"
        android:layout_below="@+id/tv_VeranderPaswoordHeader"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/et_OldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:inputType="textPassword"
        android:hint="@string/changepassword_oldpassword"
        android:layout_below="@+id/tv_noInternet" />
    <EditText
        android:id="@+id/et_NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/et_OldPassword"
        android:inputType="textPassword"
        android:hint="@string/changepassword_newpassword"/>
    <EditText
        android:id="@+id/et_PasswordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/et_NewPassword"
        android:inputType="textPassword"
        android:hint="@string/changepassword_newpasswordverify"/>
    <Button
        android:id="@+id/btn_ChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/changepassword_button"
        android:layout_below="@+id/et_PasswordVerify"
        android:layout_centerHorizontal="true"
        android:onClick="checkPassword"/>


</RelativeLayout>