<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    style="@android:style/Theme.Holo.NoActionBar.Fullscreen"
    android:background="#55504518"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companyinfo_naam"
        android:id="@+id/tv_bedrijfsnaam"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55504518">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_bedrijfsfoto"
                android:layout_marginTop="42dp"
                android:src="@drawable/icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_rating"
                android:layout_below="@+id/iv_bedrijfsfoto"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/companyinfo_info"
                android:id="@+id/textView6"
                android:layout_below="@+id/navbtn"
                android:layout_alignEnd="@+id/rb_rating" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/comanyinfo_bedrijfsinformatie"
                android:id="@+id/tv_bedrijfsinfo"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/companyinfo_review"
                android:id="@+id/tv_reviewkop"
                android:layout_below="@+id/tv_bedrijfsinfo"
                android:layout_centerHorizontal="true" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyinfo_mapbutton"
                android:id="@+id/button"

                android:drawableLeft="@android:drawable/ic_dialog_map"


                style="@style/com_facebook_loginview_default_style"
                android:layout_below="@+id/rb_rating"
                android:layout_alignParentStart="true"
                android:background="#ffff8624"
                android:layout_toLeftOf="@+id/navbtn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyinfo_geenreviews"
                android:id="@+id/tv_reviewtxt"
                android:layout_below="@+id/tv_reviewkop"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyinfo_navigation"
                android:id="@+id/navbtn"
                style="@style/com_facebook_loginview_default_style"
                android:drawableLeft="@android:drawable/ic_menu_directions"
                android:background="#ffff8624"
                android:layout_below="@+id/rb_rating"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_below="@+id/tv_reviewtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyinfo_submitreview"
                android:id="@+id/reviewBtn"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                style="@style/com_facebook_loginview_default_style"
                android:layout_alignStart="@+id/tv_reviewkop"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:background="#ffff8624" />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>
