<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="@style/com_facebook_loginview_default_style"
        android:background="@color/darkorange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vriendtoevoegen_kop"
        android:id="@+id/tv_vriendtoevoegenkop"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal" />

  <EditText
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/vriendtoevoegen_zoekemail"
      android:id="@+id/et_vriendtoevoegen"


      />
    <Button
        android:textColor="@color/darkorange"
        style="@style/com_facebook_loginview_default_style"
        android:background="@color/gray2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/vriendtoevoegen_stuurvriend"
        android:id="@+id/btn_vriendtoevoegen"
        android:layout_gravity="center_horizontal" />



</LinearLayout>